java-spring-gradle/k8s/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-spring-gradle
  labels:
    app: java-spring-gradle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-spring-gradle
  template:
    metadata:
      labels:
        app: greeting-spring

    spec:
      containers:
        - name: java-spring-gradle
          image: myapp
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
#          startupProbe:
#            httpGet:
#              path: /start
#              port: 8081
#            initialDelaySeconds: 1
#            periodSeconds: 3
#            failureThreshold: 3
#          readinessProbe:
#            httpGet:
#              path: /ready
#              port: 8081
#            initialDelaySeconds: 2
#            periodSeconds: 15
#            failureThreshold: 3
#          livenessProbe:
#            httpGet:
#              path: /live
#              port: 8081
#            initialDelaySeconds: 2
#            periodSeconds: 15
#            failureThreshold: 3
          resources:
            limits:
              cpu:    "500m"   # maximum amount of cpu in millicpu
              memory: "200Mi"  # maximum amount of ram for the container
            requests:
              cpu:    "20m"   # minimum amount of cpu in millicpu
              memory: "20Mi"  # minimum amount of ram
