java-spring-gradle/k8s/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-spring-gradle
spec:
  selector:
    app: java-spring-gradle
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
